<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="Choose your @string/text_choose_topics"
            android:layout_width="297dp"
            android:layout_height="47dp"
            android:id="@+id/textView3"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/screen_title_size"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/radioGroupSize"
            tools:text="Choose your Topics"/>
    <TextView
            android:text="@string/title_pizza_screen"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:id="@+id/pizza_Shop"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:padding="10dp" android:textSize="@dimen/screen_title_size"
            app:layout_constraintHorizontal_bias="0.497"
            android:textAlignment="center" android:textColor="@android:color/background_dark"
            android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="217dp"
            android:layout_height="228dp" tools:srcCompat="@drawable/pizza"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pizza_Shop" android:scaleType="fitCenter"
            android:contentDescription="@string/title_pizza_screen"/>
    <TextView
            android:text="@string/text_choose_pizza_size"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:id="@+id/textView2"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/screen_title_size" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <RadioGroup
            android:layout_width="367dp"
            android:layout_height="39dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:orientation="horizontal" android:id="@+id/radioGroupSize" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="16dp" android:layout_marginEnd="8dp">
        <RadioButton
                android:text="@string/text_radioButton_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rButtonSmall" android:layout_weight="1"
                android:textSize="18sp"/>
        <RadioButton
                android:text="@string/text_radioButton_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton2" android:layout_weight="1"
                android:textSize="18sp"/>
        <RadioButton
                android:text="@string/text_radioButton_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton" android:layout_weight="1"
                android:textSize="18sp"/>
    </RadioGroup>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="193dp"
            android:layout_height="105dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.06999999" android:id="@+id/linearLayout">
        <CheckBox
                android:text="@string/text_checkButton_onions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/checkBoxOnions"
                tools:text="@string/text_checkButton_onions"/>
        <CheckBox
                android:text="@string/text_checkButton_olives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/checkBoxOlives"
                tools:text="@string/text_checkButton_olives"/>
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/checkBoxtomatoes"
                tools:text="@string/text_checkButton_tomatoes" android:text="@string/text_checkButton_tomatoes"/>
    </LinearLayout>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtComments" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.13"
            app:layout_constraintHorizontal_bias="0.11" android:hint="add your comment here"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/butSave" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtComments"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>